--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,16 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Codewiser\\": "src/"
+            "Codewiser\\Database\\": "src/",
+            "Illuminate\\Database\\Eloquent\\Relations\\": "doc/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/",
+            "Workbench\\App\\": "workbench/app/",
+            "Workbench\\Database\\Factories\\": "workbench/database/factories/",
+            "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
         }
     },
     "authors": [
@@ -17,5 +26,30 @@
     "minimum-stability": "stable",
     "require": {
         "laravel/framework": ">=10.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.5",
+        "orchestra/testbench": "^10.6"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Codewiser\\Database\\PivotServiceProvider"
+            ]
+        }
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "@clear",
+            "@prepare"
+        ],
+        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+        "prepare": "@php vendor/bin/testbench package:discover --ansi",
+        "build": "@php vendor/bin/testbench workbench:build --ansi",
+        "serve": [
+            "Composer\\Config::disableProcessTimeout",
+            "@build",
+            "@php vendor/bin/testbench serve --ansi"
+        ]
     }
 }
